<resources>
    <string name="app_name">安卓开发指南</string>
    <string name="activity_main_text">NoHttp简单请求网络方法</string>
    <string name="sys_title_text">调用系统拍照并存入到相册</string>
    <string name="sys_title_text2">调用系统录音机并存入到本地</string>
    <string name="sys_title_text3">调用系统摄像机并存入到本地</string>
    <string name="home_item1">网络请求框架</string>
    <string name="home_item5">工具类集合</string>
    <string name="home_item4">项目案例</string>
    <string name="home_item7">常用界面设计</string>
    <string name="home_item8">更多</string>
    <string name="home_item6">地图</string>
    <string name="home_item3">实用功能</string>
    <string name="home_item2">第三方SDK</string>
    <string name="home_bottom">开始</string>
    <string name="home_bottom2">正在加载时间</string>
    <string name="weather_forecast">预报</string>
    <string name="weather_quality">空气质量</string>
    <string name="weather_quality_bottom_text">AQI指数</string>
    <string name="weather_quality_bottom_text2">PM2.5指数</string>
    <string name="weather_suggestion_title">生活建议</string>
    <string name="querying">正在查询中...</string>
    <string name="loading">正在请求...</string>
    <string name="material_dialogs">Material Dialogs</string>
    <string name="life_a">测试页面A</string>
    <string name="life_btn_b">开启B页面</string>
    <string name="life_btn_c">开启C页面</string>
    <string name="life_finish_a">销毁A页面</string>
    <string name="life_dialog">Dialog</string>
    <string name="life_method_list">Lifecycle Method List</string>
    <string name="life_activity_status">Activity Status</string>
    <string name="welcome_text">Welcome to visit and study.</string>
    <string name="welcome_text2">立即体验</string>
    <string name="http_buttom">网络框架的基本使用</string>
    <string name="http_text">OkHttp</string>
    <string name="http_text1">NoHttp</string>
    <string name="music_text">做最好的音乐!</string>
</resources>
