<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    android:padding="@dimen/dp_8">

    <TextView
        style="@style/MatchWrap"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dp_16"
        android:text="@string/life_a"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/dp_20" />

    <RelativeLayout
        style="@style/MatchMatch"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start_b"
            style="@style/WrapWrap"
            android:onClick="startActivityB"
            android:text="@string/life_btn_b" />

        <Button
            android:id="@+id/btn_start_c"
            style="@style/WrapWrap"
            android:layout_toRightOf="@id/btn_start_b"
            android:onClick="startActivityC"
            android:text="@string/life_btn_c" />

        <Button
            android:id="@+id/btn_finish_a"
            style="@style/WrapWrap"
            android:layout_toRightOf="@id/btn_start_c"
            android:onClick="finishActivityA"
            android:text="@string/life_finish_a" />

        <Button
            android:id="@+id/btn_start_dialog"
            style="@style/WrapWrap"
            android:layout_toRightOf="@id/btn_finish_a"
            android:onClick="startDialog"
            android:text="@string/life_dialog" />
    </RelativeLayout>

    <TextView
        style="@style/WrapWrap"
        android:text="@string/life_method_list"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/dp_24" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/status_view_a"
            style="@style/MatchMatch"
            android:background="@color/white"
            android:padding="@dimen/dp_4"
            android:textColor="@color/black"
            android:typeface="monospace" />
    </ScrollView>

    <TextView
        style="@style/MatchWrap"
        android:text="@string/life_activity_status"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/dp_24" />

    <TextView
        android:id="@+id/status_view_all_a"
        style="@style/MatchWrap"
        android:background="@color/white"
        android:padding="@dimen/dp_4"
        android:textColor="@color/black"
        android:typeface="monospace" />
</LinearLayout>
