<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@mipmap/bj_home">

    <LinearLayout
        style="@style/MatchWrap"
        android:orientation="horizontal"
        android:id="@+id/home_liner">

        <LinearLayout
            style="@style/MatchMatch"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                style="@style/WrapWrap"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/home_item1"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_40"
                    android:background="@color/transparent_half">

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item1"
                        android:textColor="@color/home" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="@dimen/dp_44"
                        android:layout_height="@dimen/dp_44"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item1" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/home_item2"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_40"
                    android:background="@color/transparent_half">

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item2"
                        android:textColor="@color/home" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="@dimen/dp_52"
                        android:layout_height="@dimen/dp_52"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item2" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/WrapWrap"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/home_item3"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/transparent_half">

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item3" />

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item3"
                        android:textColor="@color/home" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/home_item4"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/transparent_half">

                    <ImageView
                        android:layout_width="@dimen/dp_35"
                        android:layout_height="@dimen/dp_35"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item4" />

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item4"
                        android:textColor="@color/home" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/WrapWrap"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/transparent_half">

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item5"
                        android:textColor="@color/home" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item5" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/transparent_half">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item6" />

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item6"
                        android:textColor="@color/home" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/WrapMatch"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/transparent_half">

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item7" />

                    <TextView
                        style="@style/MatchWrap"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:text="@string/home_item7"
                        android:textColor="@color/home" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/transparent_half">

                    <ImageView
                        android:layout_width="@dimen/dp_40"
                        android:layout_height="@dimen/dp_40"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/home_item8" />

                    <TextView
                        style="@style/MatchWrap"
                        android:gravity="center"
                        android:text="@string/home_item8"
                        android:textColor="@color/home"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/textView5" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            style="@style/MatchMatch"
            android:layout_weight="3">

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:background="@color/transparent_half"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/home_window"
            android:layout_width="@dimen/dp_28"
            android:layout_height="@dimen/dp_28"
            android:layout_centerVertical="true"
            android:src="@mipmap/home_window"
            android:layout_marginLeft="@dimen/dp_10" />

        <TextView
            style="@style/WrapMatch"
            android:text="@string/home_bottom"
            android:textColor="@color/home"
            android:layout_marginLeft="@dimen/dp_5"
            android:gravity="center|left"
            android:layout_toRightOf="@+id/home_window"/>

        <TextView
            android:id="@+id/home_time"
            style="@style/WrapMatch"
            android:textColor="@color/home"
            android:text="@string/home_bottom2"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="@dimen/dp_5"/>
    </RelativeLayout>
</RelativeLayout>